[package]
name = "xpxc"
version = "0.1.0"
edition = "2021"

[dependencies]
concurrent-queue = { version = "1.2.2", optional = true }
crossbeam-channel = { version = "0.5.5", optional = true }
flume = { version = "0.10.13", optional = true }
spmc = { version = "0.3.0", optional = true }

[features]
default = ["std"]
std = []
